[package]
name = "secp256k1_support"
version = "0.1.0"
authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]

[dependencies]
secp256k1 = "0.9.0"
lazy_static = "1.0.1"

[dev-dependencies]
hex = "0.3.2"
