[package]
name = "trading-service"
version = "0.1.0"
authors = ["Thomas Eizinger <thomas@eizinger.io>"]

[dependencies]
rocket = "0.3.10"
rocket_contrib = "0.3.10"
serde_derive = "1.0.51"
reqwest = "0.8.5"
rocket_codegen = "0.3.10"
serde = "1.0.51"
lazy_static = "1.0.0"
log = "0.4.1"
env_logger = "0.5.10"
