[package]
name = "trading_client"
version = "0.1.0"
authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]

[dependencies]
structopt = "0.2.8"
serde = "1.0.51"
serde_json = "1.0.17"
serde_derive = "1.0.51"
reqwest = "0.8.5"
lazy_static = "1.0.0"
web3 = "0.3.0"
uuid = { version = "0.6.3", features = ["serde", "v4"] }
web3 = "0.3.0"