[package]
name = "trading_service"
version = "0.1.0"

authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]

[dependencies]
env_logger = "0.5.10"
lazy_static = "1.0.0"
log = "0.4.1"
rand = "0.4.2"
reqwest = "0.8.5"
rocket = "=0.3.10"
rocket_codegen = "=0.3.10"
rocket_contrib = "=0.3.10"
serde = "1.0.51"
serde_derive = "1.0.51"
serde_json = "1.0.17"

bitcoin_rpc = { path = "../bitcoin_rpc" }
bitcoin = { git = "https://github.com/tenx-tech/rust-bitcoin.git", branch = "bitcoincore-regtest" }
btc_htlc = { path = "../btc_htlc" }
common_types = { path = "../common_types" }
hex = "0.3.2"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.6.3"
