[package]
name = "bitcoin_htlc"
version = "0.1.0"
authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]

[dependencies]
bitcoin = { git = "https://github.com/coblox/rust-bitcoin.git", branch = "bitcoincore-regtest" }
bitcoin_rpc  = { path = "../../vendor/bitcoin_rpc" }
common_types = { path = "../common_types" }
bitcoin_support = { path = "../../vendor/bitcoin_support" }
bitcoin_witness = { path = "../../vendor/bitcoin_witness" }
secp256k1_support = { path = "../../vendor/secp256k1_support" }
hex = "0.3.2"
log = "0.4.3"

[dev-dependencies]
coblox_bitcoincore    = { path = "../../vendor/coblox_bitcoincore" }
bitcoin_rpc_helpers = { path = "../../vendor/bitcoin_rpc_helpers" }
env_logger = "0.5.11"
testcontainers = { path = "../../vendor/testcontainers_rs" }
