[package]
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
name = "bitcoin_wallet"
version = "0.1.0"
[dependencies]
hex = "0.3.2"
lazy_static = "1.0.1"
secp256k1 = "0.9.0"
bitcoin = { git = "https://github.com/coblox/rust-bitcoin.git", branch = "bitcoincore-regtest" }
common_types = { path = "../common_types" }
bitcoin_rpc  = { path = "../../vendor/bitcoin_rpc" }
uuid = { version = "0.6.5", features = ["v4"] }
rust-crypto = "0.2.36"
secp256k1_support = { path = "../../vendor/secp256k1_support" }

[dev-dependencies]
bitcoin_htlc =  { path = "../bitcoin_htlc" }
coblox_bitcoincore = { path = "../../vendor/coblox_bitcoincore" }

